<resources>
    <string name="app_name">唯忆音乐</string>
    <string name="home_title">主页</string>
    <string name="mine_title">我的</string>
    <string name="music_hall_title">乐馆</string>
    <string name="content_description_singer">歌手</string>
    <string name="content_description_ranking">音乐榜</string>
    <string name="content_description_avatar">头像</string>
    <string name="everyone_listen">大家都在听</string>
    <string name="content_description_like">喜欢</string>
    <string name="content_description_download">下载</string>
    <string name="content_description_mine_menu">菜单</string>
    <string name="content_description_main_playing">播放</string>
    <string name="mine_recent_play">最近播放</string>
    <string name="more_info">更多</string>
    <string name="cover_img">封面图</string>
    <string name="song_separator">·</string>
    <string name="main_playing_tab_content">请选择音乐</string>
    <string name="main_no_local_music">本地无音乐</string>
    <string name="unknown_song_name">未知歌曲</string>
    <string name="unknown_singer_name">未知歌手</string>
</resources>